--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<p align="center">
-    <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&width=435&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" />
-</p>
+<a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&center=true&vCenter=true&width=435&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" /></a>
