--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&center=true&vCenter=true&width=435&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" /></a>
+<p align="center">
+    <a href="https://git.io/typing-svg">
+        <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&width=435&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" />
+    </a>
+</p>
