--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<p align="center">
-    <a href="https://git.io/typing-svg">
-        <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&width=380&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" />
-    </a>
-</p>
+<a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=1966FA&center=true&width=700&lines=Unmotivatedly-driven+Programmer" alt="Typing SVG" /></a>
